# libfreenect2-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  build_libfreenect.yml  lint.yml  test.yml
examples/pointcloud/: Cargo.toml
examples/pointcloud/src/: constants.rs  freenect_state.rs  main.rs  multi_thread_image_processor.rs  renderer.rs  state.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
ffi/: .clang-format  CMakeLists.txt
ffi/include/: config.hpp  frame.hpp  freenect2_device.hpp  libfreenect2.hpp  logger.hpp  macros.hpp  registration.hpp
ffi/src/: config.cpp  frame.cpp  freenect2_device.cpp  libfreenect2.cpp  logger.cpp  registration.cpp
libfreenect2-rs/: Cargo.toml  README.md  build.rs
libfreenect2-rs/build_util/: libs.rs  mod.rs  target_dir.rs  zipped_library.rs
libfreenect2-rs/src/: ffi.rs  lib.rs
libfreenect2-rs/src/test/: config.rs  frame_listener.rs  freenect2.rs  mod.rs
libfreenect2-rs/src/types/: config.rs  frame.rs  frame_data.rs  frame_data_iter.rs  frame_listener.rs  frame_type.rs  frame_value.rs  freenect2.rs  freenect2_device.rs  mod.rs  registration.rs
libfreenect2-rs/src/util/: logger.rs
rendered/: Cargo.toml
rendered/src/: main.rs
