[package]
name = "libfreenect2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
anyhow = "1.0"

[build-dependencies]
cxx-build = "1.0"
ring = "~0.17"
hex = "~0.4"
zip-extract = "~0.1"
strum = { version = "~0.26", features = ["derive"] }
anyhow = "~1.0"
regex = "~1.10"
octocrab = "~0.39"
tokio = "~1"
attohttpc = { version = "~0.28", default-features = false, features = ["rustls"] }
