[package]
name = "pointcloud"
version = "0.1.0"
edition = "2021"

[dependencies]
kiss3d = "0.35.0"
anyhow = "1.0"
nalgebra = { version = "0.30.0", features = ["rand"] }
rand = "0.8.5"
image = { version = "0.25.2", optional = true }
libfreenect2-rs = { path = "../../libfreenect2-rs" }
colors-transform = "0.2.11"
once_cell = "1.19"

[features]
image = ["libfreenect2-rs/image", "dep:image"]
